added math to requirements.txt

--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "1bae27b1-943d-4ae1-9265-cfbed5fd3061",
    "metadata": {},
    "outputs": [],
@@ -51,10 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2c867baa-be67-47fc-b762-59fcf6120a30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final X shape: (2612, 64, 64, 3)\n",
+      "Final X shape: (327, 64, 64, 3)\n",
+      "Train positive ratio: 0.49119448698315465 n_train: 2612\n",
+      "Test  positive ratio: 0.5168195718654435 n_test: 327\n"
+     ]
+    }
+   ],
    "source": [
     "labels_train = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/train/train.xml\", min_coverage=0.3)\n",
     "labels_test  = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/test/test.xml\",  min_coverage=0.3)\n",
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2d128233-0e35-43ce-bc87-9c19bc96fc91",
    "metadata": {},
    "outputs": [
@@ -244,12 +255,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0e8f0abe-111f-41ec-9975-1ca8ba52ec03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model(X, Y, layers_dims, optimizer, learning_rate = 0.0007, mini_batch_size = 64, beta = 0.9,\n",
+    "import math\n",
+    "def optimized_model(X, Y, layers_dims, optimizer, learning_rate = 0.0007, mini_batch_size = 64, beta = 0.9,\n",
     "          beta1 = 0.9, beta2 = 0.999,  epsilon = 1e-8, num_epochs = 5000, print_cost = True):\n",
     "    \"\"\"\n",
     "    3-layer neural network model which can be run in different optimizer modes.\n",
@@ -279,7 +291,7 @@
     "    m = X.shape[1]                   # number of training examples\n",
     "    \n",
     "    # Initialize parameters\n",
-    "    parameters = initialize_parameters(layers_dims)\n",
+    "    parameters = initialize_parameters_deep(layers_dims)\n",
     "\n",
     "    # Initialize the optimizer\n",
     "    if optimizer == \"gd\":\n",
@@ -303,17 +315,18 @@
     "            (minibatch_X, minibatch_Y) = minibatch\n",
     "\n",
     "            # Forward propagation\n",
-    "            a3, caches = forward_propagation(minibatch_X, parameters)\n",
+    "            AL, caches = L_model_forward(minibatch_X, parameters)\n",
     "\n",
     "            # Compute cost and add to the cost total\n",
-    "            cost_total += compute_cost(a3, minibatch_Y)\n",
+    "            cost_total += compute_cost(AL, minibatch_Y)\n",
     "\n",
     "            # Backward propagation\n",
-    "            grads = backward_propagation(minibatch_X, minibatch_Y, caches)\n",
+    "            grads = L_model_backward(AL, Y, caches)\n",
     "\n",
     "            # Update parameters\n",
     "            if optimizer == \"gd\":\n",
-    "                parameters = update_parameters_with_gd(parameters, grads, learning_rate)\n",
+    "                #parameters = update_parameters_with_gd(parameters, grads, learning_rate)\n",
+    "                pass\n",
     "            elif optimizer == \"momentum\":\n",
     "                parameters, v = update_parameters_with_momentum(parameters, grads, v, beta, learning_rate)\n",
     "            elif optimizer == \"adam\":\n",
@@ -348,13 +361,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4ee5a10d-57f7-418f-82b3-2e97eba00647",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'math' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m layers_dims = [\u001b[32m12288\u001b[39m, \u001b[32m20\u001b[39m, \u001b[32m7\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m1\u001b[39m] \n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m parameters = \u001b[43moptimized_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlayers_dims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43madam\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Predict\u001b[39;00m\n\u001b[32m      4\u001b[39m predictions = predict(train_x, train_y, parameters)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/Optimized_Model.py:894\u001b[39m, in \u001b[36moptimized_model\u001b[39m\u001b[34m(X, Y, layers_dims, optimizer, learning_rate, mini_batch_size, beta, beta1, beta2, epsilon, num_epochs, print_cost)\u001b[39m\n\u001b[32m    890\u001b[39m \u001b[38;5;66;03m# Optimization loop\u001b[39;00m\n\u001b[32m    891\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_epochs):\n\u001b[32m    892\u001b[39m     \n\u001b[32m    893\u001b[39m     \u001b[38;5;66;03m# Define the random minibatches. We increment the seed to reshuffle differently the dataset after each epoch\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m894\u001b[39m     seed = seed + \u001b[32m1\u001b[39m\n\u001b[32m    895\u001b[39m     minibatches = random_mini_batches(X, Y, mini_batch_size, seed)\n\u001b[32m    896\u001b[39m     cost_total = \u001b[32m0\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/Optimized_Model.py:609\u001b[39m, in \u001b[36mrandom_mini_batches\u001b[39m\u001b[34m(X, Y, mini_batch_size, seed)\u001b[39m\n\u001b[32m    605\u001b[39m inc = mini_batch_size\n\u001b[32m    607\u001b[39m \u001b[38;5;66;03m# Step 2 - Partition (shuffled_X, shuffled_Y).\u001b[39;00m\n\u001b[32m    608\u001b[39m \u001b[38;5;66;03m# Cases with a complete mini batch size only i.e each of 64 examples.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m609\u001b[39m num_complete_minibatches = \u001b[43mmath\u001b[49m.floor(m / mini_batch_size) \u001b[38;5;66;03m# number of mini batches of size mini_batch_size in your partitionning\u001b[39;00m\n\u001b[32m    610\u001b[39m start_index= \u001b[32m0\u001b[39m\n\u001b[32m    611\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m0\u001b[39m, num_complete_minibatches):\n\u001b[32m    612\u001b[39m     \u001b[38;5;66;03m# (approx. 2 lines)\u001b[39;00m\n\u001b[32m    613\u001b[39m     \u001b[38;5;66;03m# mini_batch_X =  \u001b[39;00m\n\u001b[32m    614\u001b[39m     \u001b[38;5;66;03m# mini_batch_Y =\u001b[39;00m\n\u001b[32m    615\u001b[39m     \u001b[38;5;66;03m# YOUR CODE STARTS HERE\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'math' is not defined"
+     ]
+    }
+   ],
    "source": [
     "layers_dims = [12288, 20, 7, 5, 1] \n",
-    "parameters = model(train_x, train_y, layers_dims, optimizer = \"adam\")\n",
+    "parameters = optimized_model(train_x, train_y, layers_dims, optimizer = \"adam\")\n",
     "# Predict\n",
     "predictions = predict(train_x, train_y, parameters)\n",
     "\n",
