added mini_batch model

--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1bae27b1-943d-4ae1-9265-cfbed5fd3061",
    "metadata": {},
    "outputs": [],
@@ -255,12 +255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0e8f0abe-111f-41ec-9975-1ca8ba52ec03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
     "def optimized_model(X, Y, layers_dims, optimizer, learning_rate = 0.0007, mini_batch_size = 64, beta = 0.9,\n",
     "          beta1 = 0.9, beta2 = 0.999,  epsilon = 1e-8, num_epochs = 5000, print_cost = True):\n",
     "    \"\"\"\n",
@@ -318,10 +317,10 @@
     "            AL, caches = L_model_forward(minibatch_X, parameters)\n",
     "\n",
     "            # Compute cost and add to the cost total\n",
-    "            cost_total += compute_cost(AL, minibatch_Y)\n",
+    "            cost_total += compute_cost(AL, minibatch_Y)* minibatch_Y.shape[1]\n",
     "\n",
     "            # Backward propagation\n",
-    "            grads = L_model_backward(AL, Y, caches)\n",
+    "            grads = L_model_backward(AL, minibatch_Y, caches)\n",
     "\n",
     "            # Update parameters\n",
     "            if optimizer == \"gd\":\n",
@@ -336,7 +335,7 @@
     "        cost_avg = cost_total / m\n",
     "        \n",
     "        # Print the cost every 1000 epoch\n",
-    "        if print_cost and i % 1000 == 0:\n",
+    "        if print_cost and i % 10 == 0:\n",
     "            print (\"Cost after epoch %i: %f\" %(i, cost_avg))\n",
     "        if print_cost and i % 100 == 0:\n",
     "            costs.append(cost_avg)\n",
@@ -361,47 +360,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "4ee5a10d-57f7-418f-82b3-2e97eba00647",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'math' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after epoch 0: 0.724625\n",
+      "Cost after epoch 10: 0.724625\n",
+      "Cost after epoch 20: 0.724625\n",
+      "Cost after epoch 30: 0.724625\n",
+      "Cost after epoch 40: 0.724625\n",
+      "Cost after epoch 50: 0.724625\n",
+      "Cost after epoch 60: 0.724625\n",
+      "Cost after epoch 70: 0.724625\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m layers_dims = [\u001b[32m12288\u001b[39m, \u001b[32m20\u001b[39m, \u001b[32m7\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m1\u001b[39m] \n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m parameters = \u001b[43moptimized_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlayers_dims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43madam\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Predict\u001b[39;00m\n\u001b[32m      4\u001b[39m predictions = predict(train_x, train_y, parameters)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/Optimized_Model.py:894\u001b[39m, in \u001b[36moptimized_model\u001b[39m\u001b[34m(X, Y, layers_dims, optimizer, learning_rate, mini_batch_size, beta, beta1, beta2, epsilon, num_epochs, print_cost)\u001b[39m\n\u001b[32m    890\u001b[39m \u001b[38;5;66;03m# Optimization loop\u001b[39;00m\n\u001b[32m    891\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_epochs):\n\u001b[32m    892\u001b[39m     \n\u001b[32m    893\u001b[39m     \u001b[38;5;66;03m# Define the random minibatches. We increment the seed to reshuffle differently the dataset after each epoch\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m894\u001b[39m     seed = seed + \u001b[32m1\u001b[39m\n\u001b[32m    895\u001b[39m     minibatches = random_mini_batches(X, Y, mini_batch_size, seed)\n\u001b[32m    896\u001b[39m     cost_total = \u001b[32m0\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/Optimized_Model.py:609\u001b[39m, in \u001b[36mrandom_mini_batches\u001b[39m\u001b[34m(X, Y, mini_batch_size, seed)\u001b[39m\n\u001b[32m    605\u001b[39m inc = mini_batch_size\n\u001b[32m    607\u001b[39m \u001b[38;5;66;03m# Step 2 - Partition (shuffled_X, shuffled_Y).\u001b[39;00m\n\u001b[32m    608\u001b[39m \u001b[38;5;66;03m# Cases with a complete mini batch size only i.e each of 64 examples.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m609\u001b[39m num_complete_minibatches = \u001b[43mmath\u001b[49m.floor(m / mini_batch_size) \u001b[38;5;66;03m# number of mini batches of size mini_batch_size in your partitionning\u001b[39;00m\n\u001b[32m    610\u001b[39m start_index= \u001b[32m0\u001b[39m\n\u001b[32m    611\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m0\u001b[39m, num_complete_minibatches):\n\u001b[32m    612\u001b[39m     \u001b[38;5;66;03m# (approx. 2 lines)\u001b[39;00m\n\u001b[32m    613\u001b[39m     \u001b[38;5;66;03m# mini_batch_X =  \u001b[39;00m\n\u001b[32m    614\u001b[39m     \u001b[38;5;66;03m# mini_batch_Y =\u001b[39;00m\n\u001b[32m    615\u001b[39m     \u001b[38;5;66;03m# YOUR CODE STARTS HERE\u001b[39;00m\n",
-      "\u001b[31mNameError\u001b[39m: name 'math' is not defined"
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m layers_dims = [\u001b[32m12288\u001b[39m, \u001b[32m20\u001b[39m, \u001b[32m7\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m1\u001b[39m] \n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m#parameters = optimized_model(train_x, train_y, layers_dims, optimizer = \"adam\",num_epochs = 1000)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m parameters = \u001b[43moptimized_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlayers_dims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mgd\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Predict\u001b[39;00m\n\u001b[32m      5\u001b[39m predictions = predict(train_x, train_y, parameters)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 55\u001b[39m, in \u001b[36moptimized_model\u001b[39m\u001b[34m(X, Y, layers_dims, optimizer, learning_rate, mini_batch_size, beta, beta1, beta2, epsilon, num_epochs, print_cost)\u001b[39m\n\u001b[32m     52\u001b[39m (minibatch_X, minibatch_Y) = minibatch\n\u001b[32m     54\u001b[39m \u001b[38;5;66;03m# Forward propagation\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m55\u001b[39m AL, caches = \u001b[43mL_model_forward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mminibatch_X\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     57\u001b[39m \u001b[38;5;66;03m# Compute cost and add to the cost total\u001b[39;00m\n\u001b[32m     58\u001b[39m cost_total += compute_cost(AL, minibatch_Y)* minibatch_Y.shape[\u001b[32m1\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/Optimized_Model.py:346\u001b[39m, in \u001b[36mL_model_forward\u001b[39m\u001b[34m(X, parameters)\u001b[39m\n\u001b[32m    344\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m1\u001b[39m, L):\n\u001b[32m    345\u001b[39m     A_prev = A \n\u001b[32m--> \u001b[39m\u001b[32m346\u001b[39m     A, cache = \u001b[43mlinear_activation_forward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA_prev\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mW\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mb\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mactivation\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrelu\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    347\u001b[39m     caches.append(cache)\n\u001b[32m    349\u001b[39m \u001b[38;5;66;03m# Implement LINEAR -> SIGMOID. Add \"cache\" to the \"caches\" list.\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/Optimized_Model.py:313\u001b[39m, in \u001b[36mlinear_activation_forward\u001b[39m\u001b[34m(A_prev, W, b, activation)\u001b[39m\n\u001b[32m    309\u001b[39m     A, activation_cache = sigmoid(Z)\n\u001b[32m    311\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m activation == \u001b[33m\"\u001b[39m\u001b[33mrelu\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m    312\u001b[39m     \u001b[38;5;66;03m# Inputs: \"A_prev, W, b\". Outputs: \"A, activation_cache\".\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m313\u001b[39m     Z, linear_cache = \u001b[43mlinear_forward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA_prev\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    314\u001b[39m     A, activation_cache = relu(Z)\n\u001b[32m    316\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/notebooks/Optimized_Model.py:282\u001b[39m, in \u001b[36mlinear_forward\u001b[39m\u001b[34m(A, W, b)\u001b[39m\n\u001b[32m    268\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mlinear_forward\u001b[39m(A, W, b):\n\u001b[32m    269\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    270\u001b[39m \u001b[33;03m    Implement the linear part of a layer's forward propagation.\u001b[39;00m\n\u001b[32m    271\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    279\u001b[39m \u001b[33;03m    cache -- a python dictionary containing \"A\", \"W\" and \"b\" ; stored for computing the backward pass efficiently\u001b[39;00m\n\u001b[32m    280\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m282\u001b[39m     Z = \u001b[43mW\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m)\u001b[49m + b\n\u001b[32m    284\u001b[39m     \u001b[38;5;28;01massert\u001b[39;00m(Z.shape == (W.shape[\u001b[32m0\u001b[39m], A.shape[\u001b[32m1\u001b[39m]))\n\u001b[32m    285\u001b[39m     cache = (A, W, b)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
    "source": [
     "layers_dims = [12288, 20, 7, 5, 1] \n",
-    "parameters = optimized_model(train_x, train_y, layers_dims, optimizer = \"adam\")\n",
+    "#parameters = optimized_model(train_x, train_y, layers_dims, optimizer = \"adam\",num_epochs = 1000)\n",
+    "parameters = optimized_model(train_x, train_y, layers_dims, optimizer = \"gd\")\n",
     "# Predict\n",
     "predictions = predict(train_x, train_y, parameters)\n",
     "\n",
-    "# Plot decision boundary\n",
-    "plt.title(\"Model with Adam optimization\")\n",
-    "axes = plt.gca()\n",
-    "axes.set_xlim([-1.5,2.5])\n",
-    "axes.set_ylim([-1,1.5])\n",
-    "plot_decision_boundary(lambda x: predict_dec(parameters, x.T), train_X, train_Y)"
+    "# # Plot decision boundary\n",
+    "# plt.title(\"Model with Adam optimization\")\n",
+    "# axes = plt.gca()\n",
+    "# axes.set_xlim([-1.5,2.5])\n",
+    "# axes.set_ylim([-1,1.5])\n",
+    "# plot_decision_boundary(lambda x: predict_dec(parameters, x.T), train_X, train_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8a4d6a8c-0bd5-44f3-9262-19f60c0f07b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.4831804281345565\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = predict(test_x, test_y, parameters)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a4d6a8c-0bd5-44f3-9262-19f60c0f07b5",
+   "id": "4fa6075f-96d4-4ee5-95ec-3d9ba316bb82",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "predictions = predict(test_x, test_y, parameters)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
