yaay 99 accuarcy but 51 test overfittinggit add .

--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -41,17 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "1bae27b1-943d-4ae1-9265-cfbed5fd3061",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Optimized_Model import *"
+    "from Optimized_Model import *\n",
+    "from mini_batch_model import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2c867baa-be67-47fc-b762-59fcf6120a30",
    "metadata": {},
    "outputs": [
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2d128233-0e35-43ce-bc87-9c19bc96fc91",
    "metadata": {},
    "outputs": [
@@ -105,6 +106,52 @@
     "\n",
     "print(train_x.shape, train_y.shape)\n",
     "print(test_x.shape, test_y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "17cb8a94-f644-4ed6-8624-6948a292ba87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0/400 - cost: 0.695213\n",
+      "Epoch 40/400 - cost: 0.480214\n",
+      "Epoch 80/400 - cost: 0.302350\n",
+      "Epoch 120/400 - cost: 0.349640\n",
+      "Epoch 160/400 - cost: 0.360660\n",
+      "Epoch 200/400 - cost: 0.022759\n",
+      "Epoch 240/400 - cost: 0.353493\n",
+      "Epoch 280/400 - cost: 0.564278\n",
+      "Epoch 320/400 - cost: 0.167663\n",
+      "Epoch 360/400 - cost: 0.005034\n",
+      "Train accuracy: 99.96171516079633\n",
+      "Test accuracy: 56.574923547400616\n"
+     ]
+    }
+   ],
+   "source": [
+    "#layers_dims = [12288, 64, 32, 16, 1] \n",
+    "layers_dims = [12288, 128, 64, 32, 1]  # try modest sizes for FC net\n",
+    "params, costs = L_layer_model_mini_batch(train_x, train_y, layers_dims,\n",
+    "                              learning_rate=0.01,\n",
+    "                              num_epochs=400,\n",
+    "                              mini_batch_size=64,\n",
+    "                              print_cost=True,\n",
+    "                              seed=1,\n",
+    "                              init=\"he\")\n",
+    "\n",
+    "# evaluate\n",
+    "preds_train = predict(train_x, params)\n",
+    "acc_train = np.mean(preds_train == train_y) * 100\n",
+    "print(\"Train accuracy:\", acc_train)\n",
+    "\n",
+    "preds_test = predict(test_x, params)\n",
+    "acc_test = np.mean(preds_test == test_y) * 100\n",
+    "print(\"Test accuracy:\", acc_test)"
    ]
   },
   {
