implented learning decay

--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "1bae27b1-943d-4ae1-9265-cfbed5fd3061",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2c867baa-be67-47fc-b762-59fcf6120a30",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2d128233-0e35-43ce-bc87-9c19bc96fc91",
    "metadata": {},
    "outputs": [
@@ -143,6 +143,42 @@
     "                              print_cost=True,\n",
     "                              seed=1,\n",
     "                              init=\"he\")\n",
+    "\n",
+    "# evaluate\n",
+    "preds_train = predict(train_x, params)\n",
+    "acc_train = np.mean(preds_train == train_y) * 100\n",
+    "print(\"Train accuracy:\", acc_train)\n",
+    "\n",
+    "preds_test = predict(test_x, params)\n",
+    "acc_test = np.mean(preds_test == test_y) * 100\n",
+    "print(\"Test accuracy:\", acc_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13dfb0a5-75f0-4fe5-bc95-ab42c769d274",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 | lr=0.010000 | cost=0.710043\n",
+      "Epoch 100 | lr=0.010000 | cost=0.399506\n",
+      "Epoch 200 | lr=0.010000 | cost=0.005809\n"
+     ]
+    }
+   ],
+   "source": [
+    "layers_dims = [12288, 128, 64, 32, 1]  # try modest sizes for FC net\n",
+    "params, costs = Mini_batch_with_Learning_Rate_Decay_Model(\n",
+    "                            train_x, train_y,\n",
+    "                            layers_dims,\n",
+    "                            learning_rate0=0.01,\n",
+    "                            num_epochs=300,\n",
+    "                            mini_batch_size=64,\n",
+    "                            decay_rate=0.01)\n",
     "\n",
     "# evaluate\n",
     "preds_train = predict(train_x, params)\n",
