tried to implement mini-batch with regulization but failed (to try on sat)

--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2c867baa-be67-47fc-b762-59fcf6120a30",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2d128233-0e35-43ce-bc87-9c19bc96fc91",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "13dfb0a5-75f0-4fe5-bc95-ab42c769d274",
    "metadata": {},
    "outputs": [
@@ -164,9 +164,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 | lr=0.010000 | cost=0.710043\n",
-      "Epoch 100 | lr=0.010000 | cost=0.399506\n",
-      "Epoch 200 | lr=0.010000 | cost=0.005809\n"
+      "Epoch 0 | lr=0.010000 | cost=0.699320\n",
+      "Epoch 20 | lr=0.008333 | cost=0.586817\n",
+      "Epoch 40 | lr=0.007143 | cost=0.488490\n",
+      "Epoch 60 | lr=0.006250 | cost=0.360062\n",
+      "Epoch 80 | lr=0.005556 | cost=0.329312\n",
+      "Epoch 100 | lr=0.005000 | cost=0.062953\n",
+      "Epoch 120 | lr=0.004545 | cost=0.020279\n",
+      "Epoch 140 | lr=0.004167 | cost=0.012390\n",
+      "Epoch 160 | lr=0.003846 | cost=0.008544\n",
+      "Train accuracy: 99.96171516079633\n",
+      "Test accuracy: 58.71559633027523\n"
      ]
     }
    ],
@@ -176,9 +184,48 @@
     "                            train_x, train_y,\n",
     "                            layers_dims,\n",
     "                            learning_rate0=0.01,\n",
-    "                            num_epochs=300,\n",
+    "                            num_epochs=170,\n",
     "                            mini_batch_size=64,\n",
     "                            decay_rate=0.01)\n",
+    "\n",
+    "# evaluate\n",
+    "preds_train = predict(train_x, params)\n",
+    "acc_train = np.mean(preds_train == train_y) * 100\n",
+    "print(\"Train accuracy:\", acc_train)\n",
+    "\n",
+    "preds_test = predict(test_x, params)\n",
+    "acc_test = np.mean(preds_test == test_y) * 100\n",
+    "print(\"Test accuracy:\", acc_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5129d1b-9be5-453d-963f-b559fa0964c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    0 | lr=0.01000 | cost=3.188062\n",
+      "Epoch  100 | lr=0.00500 | cost=1.689836\n"
+     ]
+    }
+   ],
+   "source": [
+    "layers_dims = [12288, 128, 64, 32, 1]\n",
+    "\n",
+    "params, costs = miniBatch_model_regularized(\n",
+    "                            train_x, train_y,\n",
+    "                            layers_dims,\n",
+    "                            learning_rate0=0.01,\n",
+    "                            num_epochs=800,\n",
+    "                            mini_batch_size=64,\n",
+    "                            lambd=0.7,\n",
+    "                            decay_rate=0.01,\n",
+    "                            print_cost=True\n",
+    "                        )\n",
     "\n",
     "# evaluate\n",
     "preds_train = predict(train_x, params)\n",
