added data loaders

--- a/notebooks/0_load_data.ipynb
+++ b/notebooks/0_load_data.ipynb
@@ -2,11 +2,103 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "18910a1f-cd3d-4106-a96f-eb9267529cb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'h5py'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mh5py\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m      5\u001b[39m sys.path.append(\u001b[33m\"\u001b[39m\u001b[33m../src\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'h5py'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import h5py\n",
+    "import sys\n",
+    "\n",
+    "sys.path.append(\"../src\")\n",
+    "from Load_data.prepare_data import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "11ef5cb4-b67b-466e-8aa6-f6fe9d1fff77",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f625a0f3-fe0b-48da-9a07-107a665fa473",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def build_or_load_dataset(\n",
+    "    cache_path: str,\n",
+    "    image_folder: str,\n",
+    "    xml_path: str,\n",
+    "    label_mode: str,\n",
+    "    img_size: Tuple[int, int] = (64, 64),\n",
+    "    min_coverage: float = 0.3\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    label_mode:\n",
+    "      - \"binary_any\"\n",
+    "      - \"destroyed_coverage\"\n",
+    "    \"\"\"\n",
+    "\n",
+    "    os.makedirs(os.path.dirname(cache_path), exist_ok=True)\n",
+    "\n",
+    "    if os.path.exists(cache_path):\n",
+    "        print(f\"⚡ Loading cached dataset: {cache_path}\")\n",
+    "        with h5py.File(cache_path, \"r\") as f:\n",
+    "            X = f[\"X\"][:]\n",
+    "            Y = f[\"Y\"][:]\n",
+    "            filenames = f[\"filenames\"][:].astype(str)\n",
+    "        return X, Y, filenames\n",
+    "\n",
+    "    print(\"🛠️ Building dataset from scratch\")\n",
+    "\n",
+    "    X, ordered_filenames = load_and_resize_images(\n",
+    "        image_folder,\n",
+    "        size=img_size\n",
+    "    )\n",
+    "\n",
+    "    if label_mode == \"binary_any\":\n",
+    "        raw = parse_cvat_xml_all_labels(xml_path)\n",
+    "        labels = label_Y_binary(raw)\n",
+    "\n",
+    "    elif label_mode == \"destroyed_coverage\":\n",
+    "        labels = parse_destroyed_with_size_check(\n",
+    "            xml_path,\n",
+    "            min_coverage=min_coverage\n",
+    "        )\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unknown label_mode: {label_mode}\")\n",
+    "\n",
+    "    Y = build_label_array(ordered_filenames, labels)\n",
+    "\n",
+    "    with h5py.File(cache_path, \"w\") as f:\n",
+    "        f.create_dataset(\"X\", data=X, compression=\"gzip\")\n",
+    "        f.create_dataset(\"Y\", data=Y, compression=\"gzip\")\n",
+    "        f.create_dataset(\n",
+    "            \"filenames\",\n",
+    "            data=np.array(ordered_filenames, dtype=\"S\")\n",
+    "        )\n",
+    "\n",
+    "    print(f\"✅ Dataset cached to {cache_path}\")\n",
+    "    return X, Y, ordered_filenames"
+   ]
   }
  ],
  "metadata": {
