--- a/notebooks/0_load_data.ipynb
+++ b/notebooks/0_load_data.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "18910a1f-cd3d-4106-a96f-eb9267529cb8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'h5py'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mh5py\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m      5\u001b[39m sys.path.append(\u001b[33m\"\u001b[39m\u001b[33m../src\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'h5py'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import h5py\n",
@@ -29,76 +17,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "11ef5cb4-b67b-466e-8aa6-f6fe9d1fff77",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def build_or_load_binary_any_dataset(\n",
+    "    cache_path,\n",
+    "    train_image_dir,\n",
+    "    test_image_dir,\n",
+    "    train_xml,\n",
+    "    test_xml,\n",
+    "    img_size=(64, 64)\n",
+    "):\n",
+    "    os.makedirs(os.path.dirname(cache_path), exist_ok=True)\n",
+    "\n",
+    "    if os.path.exists(cache_path):\n",
+    "        print(f\"⚡ Loading cache: {cache_path}\")\n",
+    "        with h5py.File(cache_path, \"r\") as f:\n",
+    "            X_train = f[\"X_train\"][:]\n",
+    "            Y_train = f[\"Y_train\"][:]\n",
+    "            X_test  = f[\"X_test\"][:]\n",
+    "            Y_test  = f[\"Y_test\"][:]\n",
+    "        return X_train, Y_train, X_test, Y_test\n",
+    "\n",
+    "    print(\"🛠️ Building BINARY_ANY dataset\")\n",
+    "\n",
+    "    # ---- TRAIN ----\n",
+    "    X_train, fn_train = load_and_resize_images(train_image_dir, img_size)\n",
+    "    raw_train = parse_cvat_xml_all_labels(train_xml)\n",
+    "    labels_train = label_Y_binary(raw_train)\n",
+    "    Y_train = build_label_array(fn_train, labels_train)\n",
+    "\n",
+    "    # ---- TEST ----\n",
+    "    X_test, fn_test = load_and_resize_images(test_image_dir, img_size)\n",
+    "    raw_test = parse_cvat_xml_all_labels(test_xml)\n",
+    "    labels_test = label_Y_binary(raw_test)\n",
+    "    Y_test = build_label_array(fn_test, labels_test)\n",
+    "\n",
+    "    with h5py.File(cache_path, \"w\") as f:\n",
+    "        f.create_dataset(\"X_train\", data=X_train, compression=\"gzip\")\n",
+    "        f.create_dataset(\"Y_train\", data=Y_train, compression=\"gzip\")\n",
+    "        f.create_dataset(\"X_test\",  data=X_test,  compression=\"gzip\")\n",
+    "        f.create_dataset(\"Y_test\",  data=Y_test,  compression=\"gzip\")\n",
+    "\n",
+    "    print(f\"✅ Cached to {cache_path}\")\n",
+    "    return X_train, Y_train, X_test, Y_test\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f625a0f3-fe0b-48da-9a07-107a665fa473",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🛠️ Building BINARY_ANY dataset\n",
+      "Final X shape: (2612, 64, 64, 3)\n",
+      "Final X shape: (327, 64, 64, 3)\n",
+      "✅ Cached to ../EIDSeg_Dataset/cache/eidseg_64x64_binary_any.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, Y_train, X_test, Y_test = build_or_load_binary_any_dataset(\n",
+    "    cache_path=\"../EIDSeg_Dataset/cache/eidseg_64x64_binary_any.h5\",\n",
+    "    train_image_dir=\"../EIDSeg_Dataset/data/train/images/default\",\n",
+    "    test_image_dir =\"../EIDSeg_Dataset/data/test/images/default\",\n",
+    "    train_xml=\"../EIDSeg_Dataset/data/train/train.xml\",\n",
+    "    test_xml =\"../EIDSeg_Dataset/data/test/test.xml\",\n",
+    "    img_size=(64, 64)\n",
+    ")\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f625a0f3-fe0b-48da-9a07-107a665fa473",
+   "id": "42b9d9d9-b814-4836-ad0c-b4390d17e67f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def build_or_load_dataset(\n",
-    "    cache_path: str,\n",
-    "    image_folder: str,\n",
-    "    xml_path: str,\n",
-    "    label_mode: str,\n",
-    "    img_size: Tuple[int, int] = (64, 64),\n",
-    "    min_coverage: float = 0.3\n",
+    "def build_or_load_destroyed_coverage_dataset(\n",
+    "    cache_path,\n",
+    "    train_image_dir,\n",
+    "    test_image_dir,\n",
+    "    train_xml,\n",
+    "    test_xml,\n",
+    "    img_size=(64, 64),\n",
+    "    min_coverage=0.3\n",
     "):\n",
-    "    \"\"\"\n",
-    "    label_mode:\n",
-    "      - \"binary_any\"\n",
-    "      - \"destroyed_coverage\"\n",
-    "    \"\"\"\n",
-    "\n",
     "    os.makedirs(os.path.dirname(cache_path), exist_ok=True)\n",
     "\n",
     "    if os.path.exists(cache_path):\n",
-    "        print(f\"⚡ Loading cached dataset: {cache_path}\")\n",
+    "        print(f\"⚡ Loading cache: {cache_path}\")\n",
     "        with h5py.File(cache_path, \"r\") as f:\n",
-    "            X = f[\"X\"][:]\n",
-    "            Y = f[\"Y\"][:]\n",
-    "            filenames = f[\"filenames\"][:].astype(str)\n",
-    "        return X, Y, filenames\n",
+    "            X_train = f[\"X_train\"][:]\n",
+    "            Y_train = f[\"Y_train\"][:]\n",
+    "            X_test  = f[\"X_test\"][:]\n",
+    "            Y_test  = f[\"Y_test\"][:]\n",
+    "        return X_train, Y_train, X_test, Y_test\n",
     "\n",
-    "    print(\"🛠️ Building dataset from scratch\")\n",
+    "    print(\"🛠️ Building DESTROYED_COVERAGE dataset\")\n",
     "\n",
-    "    X, ordered_filenames = load_and_resize_images(\n",
-    "        image_folder,\n",
-    "        size=img_size\n",
+    "    # ---- TRAIN ----\n",
+    "    X_train, fn_train = load_and_resize_images(train_image_dir, img_size)\n",
+    "    labels_train = parse_destroyed_with_size_check(\n",
+    "        train_xml, min_coverage=min_coverage\n",
     "    )\n",
+    "    Y_train = build_label_array(fn_train, labels_train)\n",
     "\n",
-    "    if label_mode == \"binary_any\":\n",
-    "        raw = parse_cvat_xml_all_labels(xml_path)\n",
-    "        labels = label_Y_binary(raw)\n",
-    "\n",
-    "    elif label_mode == \"destroyed_coverage\":\n",
-    "        labels = parse_destroyed_with_size_check(\n",
-    "            xml_path,\n",
-    "            min_coverage=min_coverage\n",
-    "        )\n",
-    "    else:\n",
-    "        raise ValueError(f\"Unknown label_mode: {label_mode}\")\n",
-    "\n",
-    "    Y = build_label_array(ordered_filenames, labels)\n",
+    "    # ---- TEST ----\n",
+    "    X_test, fn_test = load_and_resize_images(test_image_dir, img_size)\n",
+    "    labels_test = parse_destroyed_with_size_check(\n",
+    "        test_xml, min_coverage=min_coverage\n",
+    "    )\n",
+    "    Y_test = build_label_array(fn_test, labels_test)\n",
     "\n",
     "    with h5py.File(cache_path, \"w\") as f:\n",
-    "        f.create_dataset(\"X\", data=X, compression=\"gzip\")\n",
-    "        f.create_dataset(\"Y\", data=Y, compression=\"gzip\")\n",
-    "        f.create_dataset(\n",
-    "            \"filenames\",\n",
-    "            data=np.array(ordered_filenames, dtype=\"S\")\n",
-    "        )\n",
+    "        f.create_dataset(\"X_train\", data=X_train, compression=\"gzip\")\n",
+    "        f.create_dataset(\"Y_train\", data=Y_train, compression=\"gzip\")\n",
+    "        f.create_dataset(\"X_test\",  data=X_test,  compression=\"gzip\")\n",
+    "        f.create_dataset(\"Y_test\",  data=Y_test,  compression=\"gzip\")\n",
     "\n",
-    "    print(f\"✅ Dataset cached to {cache_path}\")\n",
-    "    return X, Y, ordered_filenames"
+    "    print(f\"✅ Cached to {cache_path}\")\n",
+    "    return X_train, Y_train, X_test, Y_test\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5b0329b-0715-4f0a-8c66-e2660291a3a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, Y_train, X_test, Y_test = build_or_load_destroyed_coverage_dataset(\n",
+    "    cache_path=\"../data/cache/eidseg_64x64_destroyed_cov30.h5\",\n",
+    "    train_image_dir=\"../EIDSeg_Dataset/data/train/images/default\",\n",
+    "    test_image_dir =\"../EIDSeg_Dataset/data/test/images/default\",\n",
+    "    train_xml=\"../EIDSeg_Dataset/data/train/train.xml\",\n",
+    "    test_xml =\"../EIDSeg_Dataset/data/test/test.xml\",\n",
+    "    img_size=(64, 64),\n",
+    "    min_coverage=0.3\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "342c46f6-b883-42ab-83e1-50a507503f87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
