--- a/notebooks/0_load_data.ipynb
+++ b/notebooks/0_load_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "18910a1f-cd3d-4106-a96f-eb9267529cb8",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "11ef5cb4-b67b-466e-8aa6-f6fe9d1fff77",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f625a0f3-fe0b-48da-9a07-107a665fa473",
    "metadata": {},
    "outputs": [
@@ -75,10 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🛠️ Building BINARY_ANY dataset\n",
-      "Final X shape: (2612, 64, 64, 3)\n",
-      "Final X shape: (327, 64, 64, 3)\n",
-      "✅ Cached to ../EIDSeg_Dataset/cache/eidseg_64x64_binary_any.h5\n"
+      "🛠️ Building BINARY_ANY dataset\n"
      ]
     }
    ],
@@ -154,7 +151,7 @@
    "outputs": [],
    "source": [
     "X_train, Y_train, X_test, Y_test = build_or_load_destroyed_coverage_dataset(\n",
-    "    cache_path=\"../data/cache/eidseg_64x64_destroyed_cov30.h5\",\n",
+    "    cache_path=\"../EIDSeg_Dataset/cache//eidseg_64x64_destroyed_cov30.h5\",\n",
     "    train_image_dir=\"../EIDSeg_Dataset/data/train/images/default\",\n",
     "    test_image_dir =\"../EIDSeg_Dataset/data/test/images/default\",\n",
     "    train_xml=\"../EIDSeg_Dataset/data/train/train.xml\",\n",
